# ingest

./: README.md  pyproject.toml
docs/: SCHEMA.md
src/pops_ingest/: __init__.py  cleaning.py  cli.py  config.py  detection.py  extractor.py  metadata.py  models.py  ooxml.py  output.py  report.py  schema.py  selection.py  semantics.py  sheet_scan.py  utils.py
tests/: fixture_workbook.py  test_cleaning.py  test_cli.py  test_end_to_end.py  test_metadata.py  test_models.py  test_ooxml_security.py  test_selection.py  test_sheet_scan.py
